--- a/PdfManager/App.config
+++ b/PdfManager/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PdfManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -20,4 +23,14 @@
   <connectionStrings>
     <add name="PdfManageModelContainer" connectionString="metadata=res://*/Data.PdfManageModel.csdl|res://*/Data.PdfManageModel.ssdl|res://*/Data.PdfManageModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Data\PdfDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <applicationSettings>
+    <PdfManager.Properties.Settings>
+      <setting name="DefaultUsername" serializeAs="String">
+        <value>admin</value>
+      </setting>
+      <setting name="SettingDefaultPassword" serializeAs="String">
+        <value>admin123</value>
+      </setting>
+    </PdfManager.Properties.Settings>
+  </applicationSettings>
 </configuration>
