实现Pdf的选择与查看功能

--- a/PdfManager/App.config
+++ b/PdfManager/App.config
@@ -3,8 +3,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="PdfManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PdfManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
@@ -23,7 +23,7 @@
   <connectionStrings>
     <add name="PdfManageModelContainer" connectionString="metadata=res://*/Data.PdfManageModel.csdl|res://*/Data.PdfManageModel.ssdl|res://*/Data.PdfManageModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Data\PdfDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <applicationSettings>
+  <userSettings>
     <PdfManager.Properties.Settings>
       <setting name="DefaultUsername" serializeAs="String">
         <value>admin</value>
@@ -31,6 +31,9 @@
       <setting name="SettingDefaultPassword" serializeAs="String">
         <value>admin123</value>
       </setting>
+      <setting name="StoreDirectory" serializeAs="String">
+        <value>store</value>
+      </setting>
     </PdfManager.Properties.Settings>
-  </applicationSettings>
+  </userSettings>
 </configuration>
