--- a/PdfManager/packages.config
+++ b/PdfManager/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Apitron.PDF.Controls" version="1.0.74.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net461" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
+  <package id="Lucene.Net.Analysis.PanGu" version="2.4.1" targetFramework="net461" />
+  <package id="PdfiumViewer" version="2.9.0.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
