--- a/PdfManager/PdfManager.csproj
+++ b/PdfManager/PdfManager.csproj
@@ -359,7 +359,9 @@
       <LastGenOutput>PdfManageModel.cs</LastGenOutput>
       <DependentUpon>PdfManageModel.edmx</DependentUpon>
     </Content>
-    <Content Include="x64\pdfium.dll" />
+    <Content Include="x64\pdfium.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="x86\pdfium.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
