--- a/PdfManager/packages.config
+++ b/PdfManager/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="PdfiumViewer" version="2.9.0.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
