完成其他名的修改显示

--- a/PdfManager/App.config
+++ b/PdfManager/App.config
@@ -34,6 +34,12 @@
       <setting name="StoreDirectory" serializeAs="String">
         <value>store</value>
       </setting>
+      <setting name="Other1Name" serializeAs="String">
+        <value>其他1</value>
+      </setting>
+      <setting name="Other2Name" serializeAs="String">
+        <value>其他2</value>
+      </setting>
     </PdfManager.Properties.Settings>
   </userSettings>
 </configuration>
