更改参数设置
Signed-off-by: tcz717 <tcz717@hotmail.com>

--- a/PdfManager/App.config
+++ b/PdfManager/App.config
@@ -23,6 +23,10 @@
   <connectionStrings>
     <add name="PdfManageModelContainer" connectionString="metadata=res://*/Data.PdfManageModel.csdl|res://*/Data.PdfManageModel.ssdl|res://*/Data.PdfManageModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Data\PdfDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <system.diagnostics>
+    <!--去除下列注释以开启错误记录-->
+    <!--<assert assertuienabled="false" logfilename="app.log"/>-->
+  </system.diagnostics>
   <userSettings>
     <PdfManager.Properties.Settings>
       <setting name="DefaultUsername" serializeAs="String">
@@ -39,6 +43,9 @@
       </setting>
       <setting name="Other2Name" serializeAs="String">
         <value>其他2</value>
+      </setting>
+      <setting name="SaveLog" serializeAs="String">
+        <value>False</value>
       </setting>
     </PdfManager.Properties.Settings>
   </userSettings>
